Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28031

QMenu right to left problem

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.5, 5.0.1
    • 4.8.3, 5.0.0 Beta 2
    • None
    • Qt4, Qt5
      Windows 7 32 bit
    • Qt 5: bf178c77dda1db56ae698c1d31a6e3f685f4830f, Qt 4 0a24cec5a11678ebefe08b331812adbb9b3368aa

      When qApp's layout direction is Qt::RightToLeft (qApp->setLayoutDirection(Qt::RightToLeft)) , by clicking on particular point of the QMenu, the QMenu's items(usually QAction) will not be in the right place.

      For more information look at attachment

        1. pic1.png
          27 kB
          alamate_aoal
        2. qtbug28031_diag1.patch
          7 kB
          Friedemann Kleint
        3. right2left-QMenu-bug.zip
          23 kB
          alamate_aoal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            alamate_aoal alamate_aoal
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes